[gd_scene load_steps=6 format=2]

[ext_resource path="res://Art/fonts/STXINWEI.TTF" type="DynamicFontData" id=1]
[ext_resource path="res://Menus/WorldChoose/WorldChoose.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 60
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 50
font_data = ExtResource( 1 )

[node name="WorldChoose" type="Node2D"]
script = ExtResource( 2 )

[node name="Worlds" type="Node2D" parent="."]

[node name="World1" type="Node2D" parent="Worlds"]
position = Vector2( 240, 240 )
__meta__ = {
"_edit_group_": true
}

[node name="World1Button" type="Button" parent="Worlds/World1"]
margin_left = -140.0
margin_top = -140.0
margin_right = 140.0
margin_bottom = 140.0
focus_mode = 0
custom_fonts/font = SubResource( 1 )
enabled_focus_mode = 0
text = "World1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BounceNumber" type="Label" parent="Worlds/World1"]
margin_left = -136.0
margin_top = 30.0
margin_right = 136.0
margin_bottom = 130.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 2 )
text = "Bounce:0/0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="World2" type="Node2D" parent="Worlds"]
position = Vector2( 640, 240 )
__meta__ = {
"_edit_group_": true
}

[node name="World2Button" type="Button" parent="Worlds/World2"]
margin_left = -140.0
margin_top = -140.0
margin_right = 140.0
margin_bottom = 140.0
focus_mode = 0
custom_fonts/font = SubResource( 1 )
enabled_focus_mode = 0
text = "World2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BounceNumber" type="Label" parent="Worlds/World2"]
margin_left = -136.0
margin_top = 30.0
margin_right = 136.0
margin_bottom = 130.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 2 )
text = "Bounce:0/0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="Button" parent="."]
margin_right = 180.0
margin_bottom = 60.0
custom_fonts/font = SubResource( 3 )
text = "返回"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Worlds/World1/World1Button" to="." method="_on_World1Button_pressed"]
[connection signal="pressed" from="Worlds/World2/World2Button" to="." method="_on_World2Button_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
